2000-10-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* syncase.scm (eval):  string=? requires a string argument.
	Thanks to Dale P. Smith for the patch.

2000-10-15  Neil Jerram  <neil@ossau.uklinux.net>

	* optargs.scm: Fix typos in commentary for bound? and lambda*.

2000-10-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* session.scm (apropos, apropos-fold):  regexp-exec does not
	accept symbol arguments any more.  Thanks to Dale P. Smith for the
	patch.

2000-09-30  Gary Houston  <ghouston@arglist.com>

	* posix.scm (setgrent): pass #t, not #f.  thanks to
	Jacques A. Vidrine.

2000-09-29  Neil Jerram  <neil@ossau.uklinux.net>

	* documentation.scm (find-documentation-in-file): Modified
	according to changed format of guile-procedures.txt caused by my
	snarfing/makeinfo changes in libguile.

	* session.scm (help-doc): Improvements to (help) output: (i) a
	friendlier Emacs-style introduction line; (ii) where the help arg
	matches multiple documented entries, print an initial list of the
	entries for which documentation is found, before printing the
	actual documentation entries themselves.

2000-09-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Removed comment.  (Thanks to Brad Knotwell.)

2000-09-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* syncase.scm (putprop):  Use the high-level property interface.

2000-09-12  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* psyntax.ss (build-lexical-var): Use gentemp instead of gensym;
	Convert first argument to a string.

	* calling.scm (excursion-function-syntax,
	getter-and-setter-syntax,
	delegating-getter-and-setter-syntax): Call gensym with string
	argument.  (Thanks to Dale P. Smith.)

	* oldprint.scm (print-table-add!): Ditto.

	* boot-9.scm (gentemp): Moved to symbols.c.

2000-08-27  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (make-object-property): New function.

2000-08-26  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* boot-9.scm (make-record-type): Use `string-append' instead of
	`symbol-append'.